--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,7 @@ div{
   margin-left: auto;
   margin-right: auto;
   max-width: 90%;
-  max-height: 100vh;
+
 }
 
 
@@ -23,18 +23,18 @@ div{
 
 
 main h1, main p{
-  margin: 40px auto;
+  margin: 20px auto;
   text-align: center;
 }
 
 main h1{
-  font-size: 3em;
-  margin-top: 10vh;
+  font-size: 2.5em;
+  margin-top: 5vh;
   font-family: 'Baloo Chettan 2', cursive;
 }
 
 main p{
-  font-size: 2.5em;
+  font-size: 1.5em;
   font-family: monospace;
 }main p strong{
   color: #F06520;
@@ -49,6 +49,11 @@ main p{
 }
 
 main img{
-  max-width: 500px;
+  max-width: 400px;
   margin: 0 auto;
+  border-radius: 5px;
+}
+
+.gravner{
+  margin-top: 10px;
 }
